--- a/package.json
+++ b/package.json
@@ -9,11 +9,19 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-navigation/native": "^6.0.12",
+    "@react-navigation/native-stack": "^6.8.0",
+    "@react-navigation/stack": "^6.2.3",
+    "axios": "^0.27.2",
     "expo": "~46.0.9",
+    "expo-image-picker": "~13.3.1",
     "expo-status-bar": "~1.4.0",
     "react": "18.0.0",
     "react-dom": "18.0.0",
     "react-native": "0.69.5",
+    "react-native-flash-message": "^0.3.1",
+    "react-native-gesture-handler": "~2.5.0",
+    "react-native-safe-area-context": "^4.3.3",
     "react-native-web": "~0.18.7"
   },
   "devDependencies": {
